26/08/2005: When you save a graph in "txt" format, the labels (previously the index).
10/07/2005: Contract an edge: now contracts towards the vertex closer to the mouse arrow.
03/07/2005: Now it is possible to modify the labels of the vertices or reset tem as the indices.
----------------------------------------------------------------------------------
12/06/2005: Some new drawings that can display any map: the tree has an upward drawing and the cotree edges 
                      are now represented by "Us" (mostly theorical tools).
12/06/2005: The "graph properties" (in menu Information) allows to recompute the properties of the current graph    (properties are first erased).
12/06/2005: There was a bug introduced on the 8/4/05 which could crash Pigale while loading graphs.
12/06/2005: The class tstring was bugged and has been rewritten.
12/06/2005: Many small changes: now one can define the extbrin, ...
----------------------------------------------------------------------------------
14/04/2005: the client can receive the current server graph in TGF, GRAPHML or ASCII format.
08/04/2005: text labels for vertices can be displayed for all drawings.
08/04/2005: graphml format is partially supported.
04/04/2005: the first line of an ASCII graph file MUST be:"PIG:0" (without ").	
-------------------------------------------------------------------------------------
29/03/2005: corrected a bug in Embedding in Rn (if an edge had a color index > 16).
29/03/2005: improved client-server.
16/03/2005: added in the file menu an option to start the server.
11/03/2005: now the zoom keeps the graph on a grid if any.
09/03/2005: corrected a bug that could occur while saving a tgf file.
05/03/2005: schnyder orientation was not displaying the orientation.	
05/03/2005: now Pigale uses a second thread for non graphic functions.
25/02/2005: in all windows, the mouse wheel and the keyboard up, down and home are used to zoom.
20/02/2005: oriented edges can be drawn with an arrow