@@ -1,4 +1,5 @@
-26/08/2005: When you save a graph in "txt" format, the labels (previously the index).
+30/10/2005: When you save a graph in "graphml" format, the colors and thickness and vertex labels are saved.
+26/08/2005: When you save a graph in "txt" format, the labels (previously the index) are saved.
 10/07/2005: Contract an edge: now contracts towards the vertex closer to the mouse arrow.
 03/07/2005: Now it is possible to modify the labels of the vertices or reset tem as the indices.
 ----------------------------------------------------------------------------------
